force-app/main/default/objects/Crash_Incident__c/Crash_Incident__c.object-meta.xml
<CustomObject>
    <label>Crash Incident</label>
    <pluralLabel>Crash Incidents</pluralLabel>
    <nameField>
        <label>Incident Number</label>
        <type>AutoNumber</type>
        <displayFormat>CRASH-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>