force-app/main/default/objects/Crash_Incident__c/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <type>Text</type>
    <length>50</length>
</CustomField>