force-app/main/default/objects/Crash_Incident__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>EXC_BREAKPOINT (SIGTRAP)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EXC_BAD_ACCESS (SIGSEGV)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EXC_CRASH (SIGABRT)</fullName>
        </picklistValues>
    </picklist>
</CustomField>