force-app/main/default/objects/Crash_Incident__c/fields/Signature_Hash__c.field-meta.xml
<CustomField>
    <fullName>Signature_Hash__c</fullName>
    <label>Signature Hash</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <index>true</index>
</CustomField>