force-app/main/default/objects/Crash_Incident__c/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <label>Triage Status</label>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>New</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Investigating</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Known Issue</fullName>
        </picklistValues>
    </picklist>
</CustomField>